<resources>
    <string name="app_name">Covid Tracker</string>
    <string name="total_count">Confirmed : </string>
    <string name="total_death">Death : </string>
    <string name="total_recovered">Recovered : </string>
    <string name="covid_summary">Covid Summary</string>
    <string name="count">%s ( +%s)</string>
    <string name="refresh">Refresh</string>
    <string name="active">Active</string>
    <string name="death">Death</string>
    <string name="recovered">Recovered</string>
    <string name="most_affected">Most Affected Countries</string>
    <string name="country">Country</string>
    <string name="updates">Updates</string>
    <string name="total_case">Total Case</string>
    <string name="new_case">New Case</string>
    <string name="new_death">New Death</string>
    <string name="new_recovered">New Recovered</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Country</string>
    <string name="coming_soon">Coming Soon</string>
</resources>
