<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:background="@android:color/white"
    tools:ignore="MissingDefaultResource">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/countText"
            style="@style/InfoTextStyle"
            android:text="@string/total_count"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/deathText"/>

        <TextView
            android:id="@+id/totalCount"
            style="@style/CountTextStyle"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintLeft_toRightOf="@id/countText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/totalDeath"
            android:text="@string/count"
            tools:text="240000"/>

            <TextView
                android:id="@+id/deathText"
                style="@style/InfoTextStyle"
                android:text="@string/total_death"
                android:textColor="@android:color/holo_red_light"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/countText"
                app:layout_constraintBottom_toTopOf="@id/recoveredText" />

            <TextView
                android:id="@+id/totalDeath"
                style="@style/CountTextStyle"
                android:textColor="@android:color/holo_red_light"
                app:layout_constraintStart_toStartOf="@id/totalCount"
                app:layout_constraintLeft_toRightOf="@id/deathText"
                app:layout_constraintTop_toBottomOf="@id/totalCount"
                app:layout_constraintBottom_toTopOf="@id/totalRecovered"
                android:text="@string/count"
                tools:text="240000"/>

            <TextView
                android:id="@+id/recoveredText"
                style="@style/InfoTextStyle"
                android:text="@string/total_recovered"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/holo_green_light"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/deathText"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/totalRecovered"
                style="@style/CountTextStyle"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/holo_green_light"
                app:layout_constraintStart_toStartOf="@id/totalCount"
                app:layout_constraintLeft_toRightOf="@id/recoveredText"
                app:layout_constraintTop_toBottomOf="@id/totalDeath"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/count"
                tools:text="240000"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>